--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sudoku",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "author": {
     "name": "Karen Salazar/Pedro Mercado"
   },
@@ -26,6 +26,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ng2-pdf-viewer": "^5.2.3",
     "popper.js": "^1.14.5",
     "rxjs": "~6.3.3",
     "sass": "^1.14.3",
